@@ -310,11 +310,6 @@ MAIN GOAL for 0.6.0:
 				assert() in place, so that unknown arg types
 				are caught during development!
 
-	[X]	move  		Move a component from one path to another.
-
-	[X]	copy		copy a component (and its children) from
-				one place to another
-
 	[/]	reset		Resets the emulation. (Reloads files, clears RAM, etc.)
 				step = 0.
 
